fix: change overlap of overlay

--- a/shelter/pages/main/scss/style.scss
+++ b/shelter/pages/main/scss/style.scss
@@ -935,6 +935,7 @@ body {
 }
 
 .overlay {
+  visibility: hidden;
   opacity: 0;
   position: absolute;
   z-index: 1;
@@ -946,6 +947,7 @@ body {
   transition: opacity 700ms;
 
   &_active {
+    visibility: visible;
     opacity: 0.6;
     transition: opacity 800ms;
     z-index: 3;
